--- a/front-end-node/settings/SettingsScreenOverrides.css
+++ b/front-end-node/settings/SettingsScreenOverrides.css
@@ -1,4 +1,6 @@
 /* Remove unusable tabs in help window */
 #tab-general, #general-tab-content { display: none; }
+#tab-devices, #devices-tab-content { display: none; }
 #tab-overrides, #overrides-tab-content { display: none; }
 #tab-workspace, #workspace-tab-content { display: none; }
+#tab-network-conditions, #network-conditions-tab-content { display: none; }
